--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <head>
+<head>
 <style>
+    body {
+        background-image: url("Screenshot 2023-06-27 215634.jpg");
+    }
     
-h1 {text-align: center;}
-p {text-align: center;}
-div {text-align: center;}
+    h1 {text-align: center;}
+    p {text-align: center;}
+    div {text-align: center;}
 
-<!--Justify Object or Text-->
+    <!--Justify Object or Text-->
 
-div.justified {
-    display: flex;
-    justify-content: center;
-}
-
-
+    div.justified {
+        display: flex;
+        justify-content: center;
+    }
 </style>
 </head>
 <body>
