--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <style>
     body {
         background-image: url("Screenshot 2023-06-27 215634.jpg");
+        background-size: cover;
     }
     
     h1 {text-align: center;}
